fixed link spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -406,7 +406,7 @@ footer a {
 
     nav ul {
         padding-top: 3rem;
-        margin-left: 5.5rem;
+        margin-left: 5.2rem;
     }
 
     .nav-link {
